<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".UserDetailFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/NamaPengguna"
        android:textColor="@color/Green"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/NamaUserDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="user"
        android:textColor="@color/GreyLight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:layout_marginTop="20dp"
        android:textColor="@color/Green"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/EmailUserDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="user24@gmail.com"
        android:textColor="@color/GreyLight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TanggalLahir"
        android:textColor="@color/Green"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/TanggalUserDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="04 januari 2002"
        android:textColor="@color/GreyLight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/JenisKelamin"
        android:textColor="@color/Green"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/JKUserDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/L"
        android:textColor="@color/GreyLight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/NegaraKota"
        android:textColor="@color/Green"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/KotaUserDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Indonesia - malang"
        android:textColor="@color/GreyLight" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Deskripsi"
        android:textColor="@color/Green"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/DeskripUserDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Lorem Ipsum blablablabla blablabla bAWDNILAEFJ NUAWEFI jnfaeio oijnaefgi"
        android:textColor="@color/GreyLight" />

</LinearLayout>