<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GreyBackground"
    android:orientation="vertical"
    tools:context=".UploadActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/GreyDark"
        android:elevation="10dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@color/GreenLight"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:src="@drawable/icon_user" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/uploadtextVideoContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Video"
                android:textColor="@color/GreenLight"
                android:textSize="20sp" />

            <VideoView
                android:id="@+id/uploadVideoContent"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Detail"
                android:textColor="@color/GreenLight"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Sampul"
                android:textColor="@color/GreyLight"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:background="@color/GreyDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Judul"
                android:textColor="@color/GreyLight"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/judulUploadVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/GreyDark"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:textColor="@color/GreyLight"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Deskripsi"
                android:textColor="@color/GreyLight"
                android:textSize="15sp"
                android:inputType="textMultiLine"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="100dp"
                android:background="@color/GreyDark"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:textColor="@color/GreyLight"
                android:gravity="top|left"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Kategori"
                android:textColor="@color/GreyLight"
                android:textSize="15sp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/GreyDark">
            </Spinner>

            <Button
                android:id="@+id/btnUploadVideo"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg_filled"
                android:text="@string/Upload"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>