<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/KembaliLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Kembali"
        android:textColor="@color/GreyLight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/GreenDark">

            <EditText
                android:id="@+id/EmailLogIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_email"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/GreyLight" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/GreenDark"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/KataSandiLogIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icon_katasandi"
                android:hint="@string/KataSandi"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/GreyLight" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/lupasandi"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:text="@string/LupaSandi"
            android:textAlignment="viewEnd"
            android:textColor="@color/GreenDark"
            android:textStyle="italic" />

    </LinearLayout>

    <Button
        android:id="@+id/masuk"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_bg_filled"
        android:text="@string/Masuk"
        android:textColor="@color/GreyDark"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>