<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/KembaliRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/Kembali"
            android:textColor="@color/GreyLight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/GreenDark">

                <EditText
                    android:id="@+id/NamaPengguna"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icon_user"
                    android:hint="@string/NamaPengguna"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/GreyLight" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/GreenDark">

                <EditText
                    android:id="@+id/Email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icon_email"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/GreyLight" />
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/JK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/L"
                    android:textColor="@color/GreenLight"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/P"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/P"
                    android:textColor="@color/GreenLight" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/GreenDark">

                <EditText
                    android:id="@+id/KataSandi"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icon_katasandi"
                    android:hint="@string/KataSandi"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/GreyLight" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/GreenDark">

                <EditText
                    android:id="@+id/VerifikasiKataSandi"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/icon_katasandi"
                    android:hint="@string/VerifikasiKataSandi"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/GreyLight" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/daftarkan"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_bg_filled"
            android:text="@string/Daftar"
            android:textColor="@color/GreyDark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ProgresRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/GreyDark"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:elevation="10dp"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tunggu sebentar..."
            android:textColor="@color/GreenLight"
            android:layout_gravity="center"/>
    </LinearLayout>

</RelativeLayout>