<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".ChooseActivity">

    <TextView
        android:id="@+id/lewatiLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Lewati"
        android:textAlignment="textEnd"
        android:textColor="@color/GreyLight"
        android:textSize="17sp" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/logo_teks" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/masuk"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/btn_bg_filled"
            android:text="@string/Masuk"
            android:textColor="@color/GreyDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/daftar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg_stroke"
            android:text="@string/Daftar"
            android:textColor="@color/GreenLight"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>