<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".GuestDetailActivity">

    <TextView
        android:id="@+id/kembaliGuestDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Kembali"
        android:textColor="@color/GreyLight"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TIDAK ADA AKUN"
            android:textColor="@color/GreenLight"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="22dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/masukGuest"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/btn_bg_filled"
            android:text="@string/Masuk"
            android:textColor="@color/GreyDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/daftarGuest"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_bg_stroke"
            android:text="@string/Daftar"
            android:textColor="@color/GreenLight"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>